...
        let view = ComposerTextView()
        view.backgroundColor = .clear
        view.textContainerInset = .zero
        view.textContainer.lineFragmentPadding = 0
        view.showsVerticalScrollIndicator = false
        view.keyboardAppearance = .default
        view.accessibilityIdentifier = "composer-input"
        view.setContentCompressionResistancePriority(.defaultLow, for: .horizontal)
        view.delegate = controller
        controller.view = view
        return view
    }

...
